# Robotics

./: QRCode detection info.docx  ROS-Informations.docx  take_photo.py
Pictures/: Wall_pictures2.rar
Qr_Maze/: Nasıl eklenilir.docx
Search+PhotoTake/: HowToRun_.docx  hokuyo.urdf.xacro
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/lib/a1_456_answer/: explorer_node_a1_456_cpp
catkin_ws/devel/lib/a1_456_referee/: referee_node_a1_456
catkin_ws/devel/lib/pkgconfig/: a1_456_answer.pc  a1_456_referee.pc  project_gazebo.pc  project_ros.pc  trajectory_referee_456.pc  trajectory_skeleton_456.pc
catkin_ws/devel/lib/project_gazebo/: referee_node_a1_456
catkin_ws/devel/lib/trajectory_referee_456/: print_state  print_waypoint
catkin_ws/devel/lib/trajectory_skeleton_456/: high_speed_controller
catkin_ws/devel/share/a1_456_answer/cmake/: a1_456_answerConfig.cmake
catkin_ws/devel/share/a1_456_referee/cmake/: a1_456_refereeConfig.cmake
catkin_ws/devel/share/project_gazebo/cmake/: project_gazeboConfig.cmake
catkin_ws/devel/share/project_ros/cmake/: project_rosConfig.cmake
catkin_ws/devel/share/trajectory_referee_456/cmake/: trajectory_referee_456Config.cmake
catkin_ws/devel/share/trajectory_skeleton_456/cmake/: trajectory_skeleton_456Config.cmake
catkin_ws/src/project_gazebo/: CMakeLists.txt  package.xml
catkin_ws/src/project_gazebo/launch/: maze_world.launch
catkin_ws/src/project_gazebo/worlds/: maze.world  maze_test.world
catkin_ws/src/project_ros/: CMakeLists.txt  package.xml
catkin_ws/src/project_ros/src/: maze.py
find_secret_word/: maze.py
